--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <input type='number' id='column' name='column' min='0'>
 
             <input type='file' name='imgFile' id='imgFile'>
+
+            <label for='transparency'>透明度: </label>
+            <input type='number' id='transparency' name='transparency' min='0'>
         </p>
     </form>
 
